# tycho

./: .gitignore  CHANGELOG.md  Cargo.toml
crates/tycho-indexer/: Cargo.toml  extractors.debug.uniswap_v2_combined_created_only.yaml  extractors.debug.uniswap_v2_combined_created_store.yaml  extractors.debug.uniswap_v3_combined_created_only.yaml  extractors.debug.uniswap_v3_combined_created_store.yaml  extractors.uniswap_v2.combined.yaml  extractors.uniswap_v2.yaml  extractors.uniswap_v2_v3.combined.yaml  extractors.uniswap_v2_v3.yaml  extractors.uniswap_v3.combined.yaml  extractors.uniswap_v3.single_pool.yaml  extractors.uniswap_v3.yaml  extractors.yaml
protocols/substreams/ethereum-uniswap-v2/: Cargo.toml  Makefile  ethereum-uniswap-v2.yaml
protocols/substreams/ethereum-uniswap-v2-v3-combined/: Cargo.toml  Makefile  ethereum-uniswap-v2-v3-v2-created-only.yaml  ethereum-uniswap-v2-v3-v2-created-store.yaml  ethereum-uniswap-v2-v3-v3-created-only.yaml  ethereum-uniswap-v2-v3-v3-created-store.yaml  ethereum-uniswap-v2-v3.yaml
protocols/substreams/ethereum-uniswap-v2-v3-combined/proto/v1/: uniswap_v3.proto
protocols/substreams/ethereum-uniswap-v2-v3-combined/src/: lib.rs
protocols/substreams/ethereum-uniswap-v2-v3-combined/src/pb/: mod.rs  tycho.evm.uniswap.v2.rs  tycho.evm.v1.rs  uniswap.v3.rs
protocols/substreams/ethereum-uniswap-v2/src/: core.rs  lib.rs  traits.rs
protocols/substreams/ethereum-uniswap-v2/src/modules/: 1_map_pool_created.rs  3_map_pool_events.rs
protocols/substreams/ethereum-uniswap-v2/src/pb/: google.protobuf.rs  mod.rs  tycho.evm.v1.rs
(+194 files in other folders)
