[package]
name = "ethereum-uniswap-v2"
version = "0.3.1"
edition = "2021"

[features]
default = ["standalone-handlers"]
standalone-handlers = []

[lib]
name = "ethereum_uniswap_v2"
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
prost-types = "0.11"
ethabi = "18.0.0"
substreams-helper = { path = "../crates/substreams-helper" }
tycho-substreams = { path = "../crates/tycho-substreams" }
num-bigint = "0.4.4"
itertools = "0.12.1"
serde_qs = "0.13.0"
serde = "1.0.204"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
